Revision history for Perl extension DBIx-Class-DeploymentAdapter

{{$NEXT}}

0.08 2016-09-01T11:33:54Z

    - incremental upgrade counter fix

0.07 2016-09-01T10:55:44Z

    - updated META.json
    - added POD

0.06 2016-09-01T10:07:05Z

    - initial release to CPAN

0.05 2016-09-01T10:02:43Z

    - removed to specific backup method

0.04 2016-09-01T09:47:35Z

    - removed warnings
    - deployment handler args fixed

0.03 2016-09-01T09:13:00Z

    - deployment handler args per new()

0.02 2016-09-01T09:04:28Z

    - mysqldump backup WIP

0.01 2016-09-01T08:55:07Z

    - original version
