@@ -4,7 +4,7 @@
       "Patrick Kilter <pk@gassmann.it>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Minilla/v2.4.1, CPAN::Meta::Converter version 2.150010",
+   "generated_by" : "Minilla/v3.0.10, CPAN::Meta::Converter version 2.150005",
    "license" : [
       "perl_5"
    ],
@@ -48,11 +48,22 @@
       }
    },
    "release_status" : "unstable",
-   "version" : "0.08",
+   "resources" : {
+      "bugtracker" : {
+         "web" : "https://github.com/itnode/DBIx-Class-DeploymentAdapter/issues"
+      },
+      "homepage" : "https://github.com/itnode/DBIx-Class-DeploymentAdapter",
+      "repository" : {
+         "type" : "git",
+         "url" : "git://github.com/itnode/DBIx-Class-DeploymentAdapter.git",
+         "web" : "https://github.com/itnode/DBIx-Class-DeploymentAdapter"
+      }
+   },
+   "version" : "0.09",
    "x_authority" : "cpan:MOVEAX",
    "x_contributors" : [
       "Patrick Kilter <pas.freelance@gmail.com>",
       "Patrick Kilter <pas.freelance@googlemail.com>"
    ],
-   "x_serialization_backend" : "JSON::PP version 2.27400"
+   "x_serialization_backend" : "JSON::PP version 2.27300"
 }
