@@ -2,6 +2,8 @@ Revision history for Perl extension DBIx-Class-DeploymentAdapter
 
 {{$NEXT}}
 
+    - more verbose upgrading 
+
 0.08 2016-09-01T11:33:54Z
 
     - incremental upgrade counter fix
